@@ -11,7 +11,8 @@ R_CallMethodDef CallMethods[] = {
   {"mgcv_pmmult2", (DL_FUNC) &mgcv_pmmult2,5},
   {"mgcv_Rpiqr", (DL_FUNC) &mgcv_Rpiqr,5}, 
   { "mgcv_tmm",(DL_FUNC)&mgcv_tmm,5},
-  { "mgcv_chol_down",(DL_FUNC)&mgcv_chol_down,5}, 
+  { "mgcv_chol_down",(DL_FUNC)&mgcv_chol_down,5},
+  { "mgcv_chol_up",(DL_FUNC)&mgcv_chol_up,5}, 
   { "mgcv_Rpbsi",(DL_FUNC)&mgcv_Rpbsi,2},
   { "mgcv_RPPt",(DL_FUNC)&mgcv_RPPt,3},
   { "mgcv_Rpchol",(DL_FUNC)&mgcv_Rpchol,4},
