@@ -163,6 +163,7 @@ SEXP mgcv_Rpchol(SEXP Amat,SEXP PIV,SEXP NT,SEXP NB);
 void dchol(double *dA, double *R, double *dR,int *p);
 void chol_down(double *R,double *Rup,int *n,int *k,int *ut);
 void mgcv_chol_down(SEXP r,SEXP ru,SEXP N,SEXP K, SEXP UT);
+void mgcv_chol_up(SEXP r,SEXP U,SEXP N,SEXP UP,SEXP EPS);
 void vcorr(double *dR,double *Vr,double *Vb,int *p,int *M);
 SEXP mgcv_Rpforwardsolve(SEXP R, SEXP B,SEXP NT);
 SEXP mgcv_Rpbacksolve(SEXP R, SEXP B,SEXP NT);
